[Fix] 'Email input' on the footer is now aligned

--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -68,11 +68,20 @@
 .Footer .info .infoContact .info_P p{
     font-size: 1.4rem;
 }
+.Footer .info .infoInput {
+    margin-bottom: 1rem;
+}
+
+// .Footer .info .infoBlock h3 {
+
+//     border: solid 1px white;
+// }
+
 .Footer .info .infoInput h3{
     font-size: 2.4rem;
 }
 .Footer .info .infoInput p{
-    margin: .4rem 0 1.2rem 0;
+    margin: .6rem 0 1.2rem 0;
     font-size: 1.4rem;
 }
 .Footer .info .infoInput .inputSubmit {
